syntax = "proto3";
 
package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/afisha";
option java_package = "ru.yandex.alice.protos.data.scenario.afisha";

import "mapreduce/yt/interface/protos/extension.proto";

message TAfishaTeaserData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
    string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
    string Date = 3 [json_name = "date", (NYT.column_name) = "date"];
    string Place = 4 [json_name = "place", (NYT.column_name) = "place"];
    string ContentRating = 5 [json_name = "content_rating", (NYT.column_name) = "content_rating"];
}