syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/photoframe";
option java_package = "ru.yandex.alice.protos.data.scenario.photoframe";

import "mapreduce/yt/interface/protos/extension.proto";

message TScreenSaverData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string ImageUrl = 1 [json_name = "image_url", (NYT.column_name) = "image_url"];
}
