syntax = "proto3";
 
package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/weather";
option java_package = "ru.yandex.alice.protos.data.scenario.weather";

import "mapreduce/yt/interface/protos/extension.proto";

message TWeatherCondition {
    string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
    double FeelsLike = 2 [json_name = "feels_like", (NYT.column_name) = "feels_like"];
    double Cloudness = 3 [json_name = "cloudness", (NYT.column_name) = "cloudness"];
    double PrecStrength = 4 [json_name = "prec_strength", (NYT.column_name) = "prec_strength"];
    uint32 PrecType = 5 [json_name = "prec_type", (NYT.column_name) = "prec_type"];
}

message TWeatherLocation {
    string City = 1 [json_name = "city", (NYT.column_name) = "city"];
    string CityPrepcase = 2 [json_name = "city_prepcase", (NYT.column_name) = "city_prepcase"];
}

message TDaylightHours {
    string Sunrise = 1 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
    string Sunset = 2 [json_name = "sunset", (NYT.column_name) = "sunset"];
}

// Weather teaser

message TWeatherTeaserData {
    repeated TWeatherHourItem HourItems = 1 [json_name = "hour_items", (NYT.column_name) = "hour_items"];
    string Date = 2 [json_name = "date", (NYT.column_name) = "date"];
    TWeatherLocation GeoLocation = 3 [json_name = "geo_location", (NYT.column_name) = "geo_location"];
    string Tz = 4 [json_name = "tz", (NYT.column_name) = "tz"];
    string UserTime = 5 [json_name = "user_time", (NYT.column_name) = "user_time"];
    string Sunrise = 6 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
    string Sunset = 7 [json_name = "sunset", (NYT.column_name) = "sunset"];
    double Temperature = 8 [json_name = "temperature", (NYT.column_name) = "temperature"];
    string Icon = 9 [json_name = "icon", (NYT.column_name) = "icon"];
    TWeatherCondition Condition = 10 [json_name = "condition", (NYT.column_name) = "condition"];
    string IconType = 11 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
    string UserDate = 12 [json_name = "user_date", (NYT.column_name) = "user_date"];
}

message TWeatherMainScreenData {
    string Date = 1 [json_name = "date", (NYT.column_name) = "date"];
    TWeatherLocation GeoLocation = 2 [json_name = "geo_location", (NYT.column_name) = "geo_location"];
    string Tz = 3 [json_name = "tz", (NYT.column_name) = "tz"];
    string UserTime = 4 [json_name = "user_time", (NYT.column_name) = "user_time"];
    string Sunrise = 5 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
    string Sunset = 6 [json_name = "sunset", (NYT.column_name) = "sunset"];
    double Temperature = 7 [json_name = "temperature", (NYT.column_name) = "temperature"];
    string Icon = 8 [json_name = "icon", (NYT.column_name) = "icon"];
    TWeatherCondition Condition = 9 [json_name = "condition", (NYT.column_name) = "condition"];
    string IconType = 10 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
    string UserDate = 11 [json_name = "user_date", (NYT.column_name) = "user_date"];
}

// Weather by hours

message TWeatherHourItem {
    uint32 Hour = 1 [json_name = "hour", (NYT.column_name) = "hour"];
    uint64 Timestamp = 2 [json_name = "timestamp", (NYT.column_name) = "timestamp"];
    double Temperature = 3 [json_name = "temperature", (NYT.column_name) = "temperature"];
    string Icon = 4 [json_name = "icon", (NYT.column_name) = "icon"];
    string IconType = 5 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
    double PrecStrength = 6 [json_name = "prec_strength", (NYT.column_name) = "prec_strength"];
    uint32 PrecType = 7 [json_name = "prec_type", (NYT.column_name) = "prec_type"];
}

message TWeatherDayHoursData {
    repeated TWeatherHourItem HourItems = 1 [json_name = "hour_items", (NYT.column_name) = "hour_items"];
    string Date = 2 [json_name = "date", (NYT.column_name) = "date"];
    TWeatherLocation GeoLocation = 3 [json_name = "geo_location", (NYT.column_name) = "geo_location"];
    string DayPartType = 4 [json_name = "day_part_type", (NYT.column_name) = "day_part_type"];
    string Tz = 5 [json_name = "tz", (NYT.column_name) = "tz"];
    string UserTime = 6 [json_name = "user_time", (NYT.column_name) = "user_time"];
    string Sunrise = 7 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
    string Sunset = 8 [json_name = "sunset", (NYT.column_name) = "sunset"];
    double Temperature = 9 [json_name = "temperature", (NYT.column_name) = "temperature"];
    string Icon = 10 [json_name = "icon", (NYT.column_name) = "icon"];
    TWeatherCondition Condition = 11 [json_name = "condition", (NYT.column_name) = "condition"];
    TDaylightHours TodayDaylight = 12 [json_name = "today_dayligth", (NYT.column_name) = "today_dayligth"];
    string IconType = 13 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
    string UserDate = 14 [json_name = "user_date", (NYT.column_name) = "user_date"];
}

// Weather by day parts

message TWeatherDayPartData {
    string Date = 1 [json_name = "date", (NYT.column_name) = "date"];
    TWeatherLocation GeoLocation = 2 [json_name = "geo_location", (NYT.column_name) = "geo_location"];
    string DayPartType = 3 [json_name = "day_part_type", (NYT.column_name) = "day_part_type"];
    string Tz = 4 [json_name = "tz", (NYT.column_name) = "tz"];
    string UserTime = 5 [json_name = "user_time", (NYT.column_name) = "user_time"];
    string Sunrise = 6 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
    string Sunset = 7 [json_name = "sunset", (NYT.column_name) = "sunset"];
    double Temperature = 8 [json_name = "temperature", (NYT.column_name) = "temperature"];
    string Icon = 9 [json_name = "icon", (NYT.column_name) = "icon"];
    TWeatherCondition Condition = 10 [json_name = "condition", (NYT.column_name) = "condition"];
    TDaylightHours TodayDaylight = 11 [json_name = "today_dayligth", (NYT.column_name) = "today_dayligth"];
    string IconType = 12 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
    string UserDate = 13 [json_name = "user_date", (NYT.column_name) = "user_date"];
}

message TWeatherDayPartItem {
    string DayPartType = 1 [json_name = "day_part_type", (NYT.column_name) = "day_part_type"];
    double Temperature = 2 [json_name = "temperature", (NYT.column_name) = "temperature"];
    string Icon = 3 [json_name = "icon", (NYT.column_name) = "icon"];
    TWeatherCondition Condition = 4 [json_name = "condition", (NYT.column_name) = "condition"];
    string IconType = 5 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
}

message TWeatherDayData {
    repeated TWeatherDayPartItem DayPartItems = 1 [json_name = "day_part_items", (NYT.column_name) = "day_part_items"];
    string Date = 2 [json_name = "date", (NYT.column_name) = "date"];
    TWeatherLocation GeoLocation = 3 [json_name = "geo_location", (NYT.column_name) = "geo_location"];
    string Tz = 4 [json_name = "tz", (NYT.column_name) = "tz"];
    string UserTime = 5 [json_name = "user_time", (NYT.column_name) = "user_time"];
    string Sunrise = 6 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
    string Sunset = 7 [json_name = "sunset", (NYT.column_name) = "sunset"];
    double Temperature = 8 [json_name = "temperature", (NYT.column_name) = "temperature"];
    string Icon = 9 [json_name = "icon", (NYT.column_name) = "icon"];
    TWeatherCondition Condition = 10 [json_name = "condition", (NYT.column_name) = "condition"];
    TDaylightHours TodayDaylight = 11 [json_name = "today_dayligth", (NYT.column_name) = "today_dayligth"];
    string IconType = 12 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
    string UserDate = 13 [json_name = "user_date", (NYT.column_name) = "user_date"];
}

// Weather by days

message TWeatherDayItem {
    string Date = 1 [json_name = "date", (NYT.column_name) = "date"];
    string Tz = 2 [json_name = "tz", (NYT.column_name) = "tz"];
    uint32 WeekDay = 3 [json_name = "week_day", (NYT.column_name) = "week_day"];
    double DayTemp = 4 [json_name = "day_temp", (NYT.column_name) = "day_temp"];
    double NightTemp = 5 [json_name = "night_temp", (NYT.column_name) = "night_temp"];
    string Icon = 6 [json_name = "icon", (NYT.column_name) = "icon"];
    TWeatherCondition Condition = 7 [json_name = "condition", (NYT.column_name) = "condition"];
    string Url = 8 [json_name = "url", (NYT.column_name) = "url"];
    string IconType = 9 [json_name = "icon_type", (NYT.column_name) = "icon_type"];
}

message TWeatherDaysRangeData {
    repeated TWeatherDayItem DayItems = 1 [json_name = "day_items", (NYT.column_name) = "day_items"];
    TWeatherLocation GeoLocation = 2 [json_name = "geo_location", (NYT.column_name) = "geo_location"];
    string Tz = 3 [json_name = "tz", (NYT.column_name) = "tz"];
    string UserTime = 4 [json_name = "user_time", (NYT.column_name) = "user_time"];
    TDaylightHours TodayDaylight = 5 [json_name = "today_dayligth", (NYT.column_name) = "today_dayligth"];
    string UserDate = 6 [json_name = "user_date", (NYT.column_name) = "user_date"];
}